# AI-For-prediction

./: .dockerignore  .env.example  .gitignore  ADVANCED_SYSTEM_CAPABILITIES.md  AGI_IMPROVEMENT_PLAN.md  CHANGELOG.md  COMPREHENSIVE_CRAWLER_README.md  Complete_Academic_Report_Part1.md  Complete_Academic_Report_Part2.md  Complete_Academic_Report_Part3.md  Complete_Academic_Report_Part4.md  Complete_Academic_Report_Part5.md  Dockerfile  ENHANCED_AGI_SUMMARY.md  ENHANCED_COMPREHENSIVE_CRAWLER_README.md  ENHANCED_TRAINING_GUIDE.md  FINAL_SUMMARY.md  GPU_CPU_SELECTION_README.md  INSTALLATION_GUIDE.md  INTEGRATED_AI_SYSTEM_README.md  Image_Guide.txt  LICENSE  ONNX_ENABLEMENT_REPORT.md  ONNX_SUCCESS_REPORT.md  PERSISTENT_AGI_GUIDE.md  QUICK_START.md  README.md  SIMPLE_FUSION_README.md  SUPER_ENHANCED_TS_README.md  SUPER_FUSION_AGI_README.md  SYSTEM_SELF_EXTENDING_DEMO.md  SYSTEM_SUMMARY.md  SuperFusionAGI_Academic_Report.md  SuperFusionAGI_Enhanced_Report.docx  SuperFusionAGI_詳細課堂報告_劉哲廷.docx  Test_Results_Summary.md  ULTIMATE_AGI_README.md  ULTIMATE_AGI_SYSTEM_GUIDE.md  ULTIMATE_OPTIMIZATION_SUMMARY.md  ULTIMATE_TIME_SERIES_AGI_README.md  (+107 more)
.github/: GITHUB_ABOUT.md  RELEASE_INSTRUCTIONS.md
accelerators/: amp.py  cpu_optimization.py
agi_storage/: agi_enhanced.db
archive/: README.md
automl/: __init__.py  hyperparameter_optimization.py  optuna_runner.py
config/: README.md  batch_train.example.yaml  batch_train.small.yaml  batch_train.yaml  prediction_schema.yaml  prediction_target_keywords.yaml  schema.json  tasks.yaml
cpu_optimization/: cpu_multicore_optimization.py
(+294 files in other folders)
