[project]
name = "predict-ai"
version = "0.9.4"
description = "Multi-source time-series crawl, align, train, and optional HTTP inference"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
# 安裝依賴仍以 requirements-core.txt / requirements-automl.txt 為準（CI 與慣例）

[project.urls]
Homepage = "https://github.com/dragonheart8787/AI-For-prediction"
Repository = "https://github.com/dragonheart8787/AI-For-prediction"
Changelog = "CHANGELOG.md"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
  "automl/hyperparameter_optimization.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
